# TrendRadar-rs

./: .env.example  .gitignore  Cargo.toml  README.md
config/: config.example.yaml
config/ai_filter/: prompt.txt  update_tags_prompt.txt
crates/core/: Cargo.toml
crates/core/src/: ai.rs  config.rs  crawler.rs  error.rs  lib.rs  matcher.rs  model.rs  notify.rs  report.rs  scheduler.rs  schema.sql  storage.rs  templates.rs  timeline.rs
crates/core/templates/: base.html  report.html
crates/embedded/: Cargo.toml
crates/embedded/src/: lib.rs
crates/platform/: Cargo.toml
crates/platform/src/: mcp.rs  mcp_clean.rs
deploy/config/: ai_interests.txt
deploy/config/ai_filter/: extract_prompt.txt  update_tags_prompt.txt
src/: main.rs
