[package]
name = "trendradar-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
quick-xml.workspace = true
regex.workspace = true
chrono.workspace = true
tokio.workspace = true
askama.workspace = true
lettre.workspace = true
clap.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
