[package]
name = "trendradar-platform"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
trendradar-core = { path = "../core" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing.workspace = true
anyhow.workspace = true
clap.workspace = true
chrono.workspace = true
reqwest = { workspace = true }
